# openttd_social_integration_api

./: Cargo.toml  LICENSE  README.md  build.rs
headers/: LICENSE  openttd_social_integration_api.h  openttd_social_integration_api_v1.h
openttd_social_integration_api_macros/: Cargo.toml  README.md
openttd_social_integration_api_macros/src/: lib.rs
src/: lib.rs  raw_api.rs
