workspace = { members = ["openttd_social_integration_api_macros"] }
[package]
name = "openttd_social_integration_api"
version = "0.1.1"
authors = ["Hei Piao"]
description = "Unofficial Rust binding for OpenTTD Social Integration API."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
openttd_social_integration_api_macros = "0.1.0"
